changes after reformatting with intellij formatter